--- a/Website_deployment.yaml
+++ b/Website_deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: ecommerce-website
 spec:
-  replicas: 3  # Run 3 copies for reliability
+  replicas: 3 
   selector:
     matchLabels:
       app: ecommerce
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: ecommerce-container
-        image: my-docker-hub/ecommerce-app:v1  # Replace with your Docker image
+        image: my-docker-hub/ecommerce-app:v1  
         ports:
         - containerPort: 80
